--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
       content="Web site created using create-react-app"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <title>keepNotes</title>
+    <title>keepit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
